# drapnr

./: .env.example  .eslintrc.js  .gitignore  .npmrc  .prettierrc  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  deploy-web.yml  eas-build.yml
apps/mobile/: .detoxrc.js  .env.example  app.json  eas.json  jest.config.js  jest.setup.js  metro.config.js  package.json  sentry.config.ts  tsconfig.json
apps/mobile/app/: _layout.tsx  paywall.tsx
apps/mobile/constants/: index.ts
apps/mobile/e2e/: auth.test.ts
apps/mobile/hooks/: useAvatarModel.ts  useFrameCapture.ts  useNetworkStatus.ts  useRotationTracking.ts
apps/mobile/lib/: theme.ts
apps/mobile/services/: notifications.ts  offline.ts  (+4 more)
apps/web/: .env.example  jest.config.js  next.config.js  package.json  tailwind.config.ts  tsconfig.json
docs/plans/: 2026-03-17-drapnr-design.md  2026-03-17-drapnr-gap-resolutions.md  2026-03-17-drapnr-master-plan.md
scripts/: download_models.py  generate-models.py
server/processing/: .env.example  Dockerfile  config.py  main.py  modal_deploy.py  pyproject.toml  requirements.txt
server/processing/models/: __init__.py
server/processing/pipeline/: __init__.py  classification.py  frame_extraction.py  processor.py  quality.py  segmentation.py  texture_mapping.py  upload.py
server/processing/tests/: test_api.py  test_classification.py  test_quality.py  test_texture_mapping.py
supabase/: config.toml
supabase/migrations/: 001_initial_schema.sql  002_storage_buckets.sql  003_fix_outfit_status.sql
(+79 files in other folders)
